Fix div size overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,7 @@ body * {
   flex-direction: column;
   cursor: pointer;
   flex-grow: 0;
-  height: 60px;
+  min-height: 60px;
 }
 
 .signListCell:hover {
@@ -84,13 +84,13 @@ body * {
   text-align: center;
   font-size: 16px;
   line-height: 16px;
-  height: 16px;
+  min-height: 16px;
 }
 
 .signListCellSign {
   font-family: "Egyptian Text Proto", sans-serif;
   min-width: 44px;
-  height: 44px;
+  min-height: 44px;
   font-size: 40px;
   text-align: center;
 }
